New translation keys for configuration page; removed old memory settings page

--- a/olca-app/src/org/openlca/app/messages.properties
+++ b/olca-app/src/org/openlca/app/messages.properties
@@ -1,4 +1,4 @@
-#Mon Jul 07 12:32:08 CEST 2014
+#Tue Nov 25 14:31:15 CET 2014
 AccessAndUseRestrictions=Access and use restrictions
 Actor=Actor
 Actors=Actors
@@ -57,6 +57,7 @@ ColumnSeparator=Column separator
 Comma=Comma
 Complete=Complete
 CompleteReferenceData=Complete reference data
+Configuration=Configuration
 Connect=Connect
 ConnectProviders=Connect providers
 ConnectRecipients=Connect recipients
@@ -278,6 +279,7 @@ MatrixFiles=Matrix files
 Maximize=maximize
 MaximizeAll=Maximize all
 Maximum=Maximum
+MaximumMemoryUsage=Maximum memory usage in MB
 Mean=Mean
 Methods=Methods
 MinimalTree=minimal tree
@@ -408,7 +410,6 @@ RemoveSupplyChain=Remove supply chain
 Rename=Rename
 Report=Report
 ReportParameters=Report parameters
-ReserveMemoryMessage=Reserve the following amount of memory for openLCA
 Reset=Reset
 Resize=resize
 Result=Result
@@ -510,6 +511,7 @@ UpdatingProductSystem=Updating product system
 UpstreamTotal=Upstream total
 Usage=Usage
 UsageOf=Usage of
+UseBrowserFeatures=Use browser features
 UsedInProcesses=Used in processes
 User=User
 UserFriendlyName=User friendly name
