added more translation keys; deleted unused/old resources

--- a/olca-app/src/org/openlca/app/messages.properties
+++ b/olca-app/src/org/openlca/app/messages.properties
@@ -1,4 +1,4 @@
-#Tue Nov 25 14:31:15 CET 2014
+#Tue Nov 25 15:15:09 CET 2014
 AccessAndUseRestrictions=Access and use restrictions
 Actor=Actor
 Actors=Actors
@@ -135,6 +135,7 @@ DeleteProcess=delete process
 DeleteProcesslink=delete processlink
 DependentParameters=Dependent parameters
 Description=Description
+DeveloperTools=Developer tools
 DirectContribution=Direct contribution
 DirectImpact=Direct impact
 Direction=Direction
@@ -296,6 +297,7 @@ Move=move
 Name=Name
 NameCannotBeEmpty=The name cannot be empty
 NameEmptyOrAlreadyExists=The name is empty or already exists
+NeedOpenDatabase=You need to open a database.
 Never=Never
 NewActor=New actor
 NewCategory=new category
@@ -317,7 +319,7 @@ NewUnitGroup=New unit group
 No=No
 NoAnalysisOptionsSet=No analysis options set
 NoCostCategorySelected=No cost category selected
-NoDatabaseOpened=No database opened
+NoDatabaseOpened=No database is opened
 NoDescription=No description
 NoDistribution=No distribution
 NoExportFilesSelected=No export files selected
@@ -434,7 +436,6 @@ SearchParameters=Search parameters
 SearchProvidersFor=Search providers for
 SearchRecipientsFor=Search recipients for
 SearchResults=Search results
-SearchTextOpenDatabaseMessage=You first need to open a database
 Searching=Searching...
 SearchingForUnits=Searching for units...
 Select=Select {0}
