--- a/olca-app/src/org/openlca/app/messages_de.properties
+++ b/olca-app/src/org/openlca/app/messages_de.properties
@@ -1,4 +1,4 @@
-#Tue Nov 25 14:31:15 CET 2014
+#Tue Nov 25 15:15:09 CET 2014
 AccessAndUseRestrictions=Auflagen zum Zugang und zur Nutzung
 Actor=Kontakt
 Actors=Kontakte
@@ -135,6 +135,7 @@ DeleteProcess=Prozess l\u00F6schen
 DeleteProcesslink=Prozessverbindung l\u00F6schen
 DependentParameters=Abh\u00E4ngige Parameter
 Description=Beschreibung
+DeveloperTools=Entwicklerwerkzeuge
 DirectContribution=Direkter Beitrag
 DirectImpact=Direkte Wirkung
 Direction=Richtung
@@ -296,6 +297,7 @@ Move=Bewegen
 Name=Name
 NameCannotBeEmpty=Der Name darf nicht leer sein
 NameEmptyOrAlreadyExists=Der Name ist leer oder existiert bereits
+NeedOpenDatabase=Bitte \u00F6ffnen Sie zuerst eine Datenbank
 Never=niemals
 NewActor=Neuer Kontakt
 NewCategory=Neue Kategorie
@@ -317,7 +319,7 @@ NewUnitGroup=Neue Einheitengruppe
 No=Nein
 NoAnalysisOptionsSet=Keine Analyseoptionen ausgew\u00E4hlt
 NoCostCategorySelected=Keine Kostenkategorie ausgew\u00E4hlt
-NoDatabaseOpened=Keine Datenbank ge\u00F6ffnet
+NoDatabaseOpened=Es ist keine Datenbank ge\u00F6ffnet
 NoDescription=Keine Beschreibung
 NoDistribution=Keine Verteilung
 NoExportFilesSelected=Keine Dateien f\u00FCr Export ausgew\u00E4hlt
@@ -434,7 +436,6 @@ SearchParameters=Parameter suchen
 SearchProvidersFor=Suche Produzenten f\u00FCr
 SearchRecipientsFor=Suche Empf\u00E4nger f\u00FCr
 SearchResults=Ergebnisse suchen
-SearchTextOpenDatabaseMessage=Bitte \u00F6ffnen Sie zuerst eine Datenbank
 Searching=Suche...
 SearchingForUnits=Suche nach Einheiten...
 Select={0} ausw\u00E4hlen
