updated Spanish translation files

--- a/olca-app/src/org/openlca/app/messages_es.properties
+++ b/olca-app/src/org/openlca/app/messages_es.properties
@@ -1,10 +1,11 @@
-#Tue Nov 25 15:15:09 CET 2014
+#Fri Dec 05 15:09:05 CET 2014
 AccessAndUseRestrictions=Restricciones de acceso y uso
 Actor=Actor
 Actors=Actores
 Add=A\u00F1adir
 AddConnectedProcesses=A\u00F1adir procesos conectados
 AddNewChildCategory=A\u00F1adir nueva subcategor\u00EDa
+AddSection=A\u00F1adir secci\u00F3n
 AdditionalInformation=Informaci\u00F3n adicional
 Address=Direcci\u00F3n
 AdministrativeInformation=Informaci\u00F3n administrativa
@@ -24,6 +25,7 @@ AvoidedProductFlow=Flujo de producto evitado
 AvoidedWasteFlow=Flujo de residuos evitado
 BaseUncertainty=Incertidumbre b\u00E1sica
 Browse=Buscar
+BrowserConfiguration=Configuraci\u00F3n del navegador
 BuildNextTier=A\u00F1adir siguiente nivel
 BuildSupplyChain=A\u00F1adir cadena de suministro
 CASNumber=N\u00FAmero CAS
@@ -57,6 +59,9 @@ ColumnSeparator=Separador de columnas
 Comma=Coma
 Complete=Completa
 CompleteReferenceData=Datos de referencia completos
+Component=Componente
+Configuration=Configuraci\u00F3n
+ConfigureEcospoldMessage=En esta p\u00E1gina se puede configurar el formato EcoSpold exportado
 Connect=Conectar
 ConnectProviders=Conectar proveedores
 ConnectRecipients=Conectar destinatarios
@@ -78,6 +83,7 @@ Country=Pa\u00EDs
 CreateANewDatabase=Crear una nueva base de datos
 CreateANewProductFlowForTheProcess=Crear un nuevo flujo de producto para el proceso
 CreateDatabase=Crear base de datos
+CreateDefaultValuesForMissingFields=Crear valores por defecto para los campos vac\u00EDos
 CreateNew=Crear nuevo
 CreateProcess=Crear proceso
 CreateProcesslink=Crear enlace de proceso
@@ -132,20 +138,26 @@ DeleteFile=Eliminar archivo
 DeleteParameter=Eliminar par\u00E1metro
 DeleteProcess=eliminar proceso
 DeleteProcesslink=eliminar enlace de proceso
+DeleteReportSectionQuestion=\u00BFDesea realmente eliminar esta secci\u00F3n del informe?
+DeleteSection=Eliminar secci\u00F3n
 DependentParameters=Par\u00E1metros dependientes
 Description=Descripci\u00F3n
+DeveloperTools=Herramientas de programaci\u00F3n
 DirectContribution=Contribuci\u00F3n directa
 DirectImpact=Impacto directo
 Direction=Direcci\u00F3n
+Display=Visualizaci\u00F3n
 DoYouReallyWantToDelete=\u00BFDesea realmente eliminar {0}?
 Doi=Doi
 Dot=Punto
 EcoSpold2Export=Exportar EcoSpold 2
+EcoSpoldConfiguration=Configuraci\u00F3n EcoSpold
 Economic=Econ\u00F3mico
 Edit=Editar
 ElementaryFlow=Flujo elemental
 Email=Correo electr\u00F3nico
 EmptyDatabase=Base de datos vac\u00EDa
+EmptyValueMessage=El valor introducido est\u00E1 vac\u00EDo.
 EndDate=Fecha de finalizaci\u00F3n
 English=Ingl\u00E9s
 Error=Error
@@ -157,6 +169,7 @@ Expand=expandir
 ExpandAll=Expandir todo
 Export=Exportar...
 ExportAsMatrix=Exportar como matriz
+ExportDataSetsInOneFile=Exportar todos los conjuntos de datos en un solo archivo
 ExportDatabase=Exportar base de datos
 ExportDirectory=Exportar directorio
 ExportDone=Exportaci\u00F3n finalizada
@@ -164,6 +177,7 @@ ExportEcoSpold=Exportar EcoSpold
 ExportILCD=Exportar ILCD
 ExportMatrix=Exportar matriz
 ExportProcess=Exportando proceso...
+ExportReport=Exportar informe
 ExportResults=Exportar resultados
 ExportResultsToExcel=Exportar resultados a Excel
 ExportToExcel=Exportar a Excel
@@ -188,6 +202,7 @@ Flows=Flujos
 Folder=Carpeta
 Formula=F\u00F3rmula
 FormulaEvaluationFailed=No se ha podido evaluar la f\u00F3rmula
+FormulaInterpreter=Evaluador de f\u00F3rmulas
 FoundProblems=Encontr\u00F3 problemas\:
 FromDirectory=Del directorio\:
 FunctionalUnit=Unidad funcional
@@ -233,6 +248,7 @@ ImportEcoSpold=Importar EcoSpold
 ImportEcoSpold01DataSets=Importar conjunto de datos EcoSpold 01
 ImportEcoSpold02DataSets=Importar conjunto de datos EcoSpold 02
 ImportILCD=Importar ILCD
+IndicatorBarChart=Indicador gr\u00E1fico de barras
 IndicatorScore=Puntuaci\u00F3n del indicador
 Information=Informaci\u00F3n
 InfrastructureFlow=Flujo de infraestructura
@@ -247,6 +263,7 @@ InterventionMatrix=Matriz de intervenci\u00F3n
 InvalidAllocationFactor=Factor no v\u00E1lido
 InvalidAllocationFactorMessage=Un factor de asignaci\u00F3n debe tener un valor entre 0 y 1.
 InvalidFormula=F\u00F3rmula no v\u00E1lida
+InvalidMemoryValue=Valor de memoria no v\u00E1lido
 InvalidNumber=N\u00FAmero no v\u00E1lido
 InvalidParameterName=Nombre de par\u00E1metro no v\u00E1lido
 InvalidValue=Valor no v\u00E1lido
@@ -265,6 +282,8 @@ LastModificationDate=Fecha de \u00FAltima modificaci\u00F3n
 Latitude=Latitud
 Layout=Disposici\u00F3n
 LayoutAs=Disposici\u00F3n como {0}
+LciaCategoryDescriptionTable=Tabla de descripci\u00F3n de la categor\u00EDa de EICV
+LciaResultTable=Tabla de resultados de EICV
 Local=Local
 LocalDatabase=Base de datos local
 Location=Ubicaci\u00F3n
@@ -278,7 +297,10 @@ MatrixFiles=Archivos de matriz
 Maximize=Maximizar
 MaximizeAll=Maximizar todo
 Maximum=M\u00E1ximo
+MaximumMemoryUsage=M\u00E1ximo uso de memoria en MB
 Mean=Media
+MemoryToHighMessage=El valor de memoria es demasiado alto para su sistema operativo.
+MemoryToLowMessage=El valor de memoria debe ser al menos 256 MB.
 Methods=M\u00E9todos
 MinimalTree=\u00E1rbol m\u00EDnimo
 Minimize=Minimizar
@@ -291,6 +313,8 @@ ModelingConstants=Constantes del modelado
 MonteCarloSimulation=Simulaci\u00F3n de Monte Carlo
 Monthly=Mensualmente
 Move=mover
+MoveDown=Bajar
+MoveUp=Subir
 Name=Nombre
 NameCannotBeEmpty=El nombre no puede estar vac\u00EDo
 NameEmptyOrAlreadyExists=El nombre est\u00E1 vac\u00EDo o ya existe
@@ -311,6 +335,7 @@ NewLCIAMethod=Nuevo m\u00E9todo de EICV
 NewProcess=Nuevo proceso
 NewProductSystem=Nuevo sistema de proceso
 NewProject=Nuevo proyecto
+NewSection=Nueva secci\u00F3n
 NewSource=Nueva fuente
 NewUnitGroup=Nuevo grupo de unidad
 No=No
@@ -327,11 +352,15 @@ NoReferenceProcessSelected=No hay ning\u00FAn proceso de referencia seleccionado
 NoUnitGroupSelected=No hay ning\u00FAn grupo de unidad seleccionado
 None=Ninguno
 NormalDistribution=Distribuci\u00F3n normal
+NormalisationBarChart=Normalizaci\u00F3n - gr\u00E1fico de barras
+NormalisationRadarChart=Normalizaci\u00F3n - gr\u00E1fico radial
+NormalisationResultTable=Tabla de resultados de normalizaci\u00F3n
 Normalization=Normalizaci\u00F3n
 NormalizationAndWeightingSet=Grupo de normalizaci\u00F3n y ponderaci\u00F3n
 NormalizationFactor=Factor de normalizaci\u00F3n
 NormalizationWeighting=Normalizaci\u00F3n/Ponderaci\u00F3n
 NormalizationWeightingSets=Grupos de normalizaci\u00F3n y ponderaci\u00F3n
+NotAnIntegerNumber=El valor indicado no es un n\u00FAmero entero.
 Note=Nota
 Notification=Notificaci\u00F3n
 NumberFormatPage_Description=Establezca el n\u00FAmero de decimales para la visualizaci\u00F3n de los n\u00FAmeros.
@@ -352,6 +381,8 @@ Outputs=Salidas
 OverwriteFile=Sobrescribir archivo
 OverwriteFileQuestion=El archivo seleccionado ya existe. \u00BFDesea sobreescribirlo?
 Parameter=Par\u00E1metro
+ParameterDescriptionTable=Tabla de descripci\u00F3n de par\u00E1metros
+ParameterValueTable=Tabla de valores de par\u00E1metros
 Parameters=Par\u00E1metros
 Password=Contrase\u00F1a
 Paste=Pegar
@@ -369,6 +400,7 @@ PleaseSpecifyUser=Por favor, especifique un usuario
 Port=Puerto
 Prefer=Preferible\: {0}
 Process=Proceso
+ProcessContributionChart=Gr\u00E1fico de contribuci\u00F3n de proceso
 ProcessContributions=Contribuciones de proceso
 ProcessCosts=Costes del proceso
 ProcessEvaluationAndValidation=Evauaci\u00F3n y validaci\u00F3n del proceso
@@ -381,6 +413,7 @@ Product=Producto
 ProductSystem=Sistema de producto
 ProductSystemExcelExport=Exportar a Excel sistema de producto
 ProductSystemExcelExportMessage=Por favor, seleccionar un directorio al que exportar el sistema de producto.\nUno nuevo, donde todos los archivos creados son guardados, ser\u00E1 creado en el directorio seleccionado.
+ProductSystemStatistics=Estad\u00EDsticas del sistema de producto
 ProductSystems=Sistemas de producto
 Progress=Progreso
 Project=Proyecto
@@ -398,6 +431,8 @@ ReferenceProcess=Proceso de referencia
 ReferenceUnit=Unidad de referencia
 ReferenceUnitIsEmptyOrInvalid=La unidad de referencia est\u00E1 vac\u00EDa o no es v\u00E1lida
 RegionalizedLCIA=EICV Regionalizada
+RelativeLciaResultsBarChart=Resultados relativos de EICV - gr\u00E1fico de barras
+RelativeLciaResultsRadarChart=Resultados relativos de EICV - gr\u00E1fico radial
 Reload=Actualizar
 Remote=Remota
 RemoteDatabase=Base de datos remota
@@ -408,13 +443,17 @@ RemoveSelected=Eliminar selecci\u00F3n
 RemoveSupplyChain=Eliminar cadena de suministro
 Rename=Renombrar
 Report=Report
+ReportName=Nombre del informe
 ReportParameters=Report parameters
+ReportSections=Secciones del informe
+ReportView=Vista del informe
 Reset=Restaurar
 Resize=ajustar tama\u00F1o
 Result=Resultado
 ResultContributions=Contribuciones de resultados
 Results=Resultados
 ResultsOf=Resultados de
+ResultsOfProject=Resultados del proyecto\:
 Reviewer=Revisor
 Route=Ruta
 RunCalculation=Calcular\n
@@ -435,6 +474,7 @@ SearchRecipientsFor=Buscar destinatarios para
 SearchResults=Buscar resultados
 Searching=Buscando...
 SearchingForUnits=Buscando unidades
+Section=Secci\u00F3n
 Select=Seleccionar {0}
 SelectADirectory=Seleccionar un directorio
 SelectAUserInterfaceLanguage=Seleccionar un idioma de la interfaz de usuario
@@ -457,6 +497,8 @@ Showviews=Mostrar &vistas
 SimaProCSVImport=Importar SimaPro CSV
 SingleAmount=Valor \u00FAnico
 SingleScore=Puntuaci\u00F3n \u00FAnica
+SingleScoreBarChart=Gr\u00E1fico de barras de resultado \u00FAnico
+SingleScoreTable=Tabla de resultado \u00FAnico
 SolvingProblems=Solucionando problemas
 Source=Fuente
 SourceFileDeleteQuestion=\u00BFDeasea realmente eliminar este archivo?
@@ -465,7 +507,9 @@ Sources=Fuentes
 StandardDeviation=Desviaci\u00F3n est\u00E1ndar
 Start=Comenzar
 StartDate=Fecha de comienzo
+Statistics=Estad\u00EDsticas
 SubCategory=Subcategor\u00EDa
+Sum=Suma
 Synonyms=Sin\u00F3nimos
 SystemProcess=Proceso agregado
 SystemSaveProceedQuestion=Para realizar la acci\u00F3n requerida el sistema de producto debe ser guardado previamente. \u00BFDesea continuar?
@@ -477,10 +521,12 @@ Telephone=Tel\u00E9fono
 Test=Prueba
 TestDistribution=Distribuci\u00F3n de prueba
 TexchnologyMatrix=Matriz tecnol\u00F3gica
+Text=Texto
 TextDropComponent_ToolTipText=Arrastre un objeto seleccionado desde \nel men\u00FA de navegaci\u00F3n al  \ncampo de texto o haga click para abrir un \ncuadro de di\u00E1logo.
 TextReference=Referencia de texto
 Time=Tiempo
 TimeAndAuthor=Hora y autor
+Title=T\u00EDtulo
 ToDirectory=Al directorio\:
 TotalAmount=Cantidad total
 Tree=\u00E1rbol
@@ -509,11 +555,13 @@ UpdatingProductSystem=Actualizando sistema de producto
 UpstreamTotal=Total procesos previos
 Usage=Uso
 UsageOf=Uso de
+UseBrowserFeatures=Uso de opci\u00F3nes del navegador
 UsedInProcesses=Usado en procesos
 User=Usuario
 UserFriendlyName=Nombre f\u00E1cil de usar
 Value=Valor
 Variant=Variante
+VariantDescriptionTable=Tabla de descripci\u00F3n de variantes
 Variants=Variantes
 Version=Versi\u00F3n
 VersionNewer=Versi\u00F3n m\u00E1s nueva
