updated translation files

--- a/olca-app/OSGI-INF/l10n/bundle_de.properties
+++ b/olca-app/OSGI-INF/l10n/bundle_de.properties
@@ -1,6 +1,6 @@
-#Wed Dec 03 17:28:01 CET 2014
-ActorEditor=Personeneditor
-Actors=Personen
+#Mon Dec 15 12:37:59 CET 2014
+ActorEditor=Kontakteditor
+Actors=Kontakte
 Configuration=Einstellungen
 DataProvider=Datenprovider
 EcoSpold=EcoSpold
