--- a/olca-app/OSGI-INF/l10n/bundle_fr.properties
+++ b/olca-app/OSGI-INF/l10n/bundle_fr.properties
@@ -1,6 +1,7 @@
-#Wed Sep 17 13:48:30 CEST 2014
+#Mon Dec 15 12:37:59 CET 2014
 ActorEditor=Acteur \u00E9diteur
 Actors=Acteurs
+Configuration=Configuration
 DataProvider=Fournisseur de donn\u00E9es
 EcoSpold=EcoSpold 1
 ElementaryFlows=Flux \u00E9l\u00E9mentaires
