--- a/olca-app/src/org/openlca/app/messages_it.properties
+++ b/olca-app/src/org/openlca/app/messages_it.properties
@@ -1,10 +1,11 @@
-#Tue Nov 25 15:15:09 CET 2014
+#Mon Dec 15 12:34:01 CET 2014
 AccessAndUseRestrictions=Restrizioni di accesso e uso
 Actor=Autore
 Actors=Autori
 Add=Aggiungi
 AddConnectedProcesses=Aggiungi i processi collegati
 AddNewChildCategory=Aggiungi una nuova sotto categoria
+AddSection=Aggiungi sezione
 AdditionalInformation=Ulteriori informazioni
 Address=Indirizzo
 AdministrativeInformation=Informazioni amministrative
@@ -24,6 +25,7 @@ AvoidedProductFlow=Flusso di prodotto evitato
 AvoidedWasteFlow=Flusso di rifiuti evitato
 BaseUncertainty=Incertezza di base
 Browse=Naviga
+BrowserConfiguration=Configurazione del navigatore
 BuildNextTier=Costruisci il livello successivo
 BuildSupplyChain=Costruisci la catena di approvvigionamento
 CASNumber=Numero CAS
@@ -35,9 +37,9 @@ CalculateResults=Calcola i risultati
 CalculationProperties=Propriet\u00E0 di calcolo
 CalculationType=Tipologia di calcolo
 CalculationWizardDescription=Occorre scegliere le propriet\u00E0 di calcolo
-Cancel=Cancella
+Cancel=Annulla
 CannotDelete=Impossibile eliminare
-CannotDeleteMessage=L'elemento selezionato non pu\u00F2 esserer eliminato perch\u00E8 \u00E8 utilizzato da un altro set di dati. Utilizza la funzione "Utilizzato da" per verificare i collegamenti.
+CannotDeleteMessage=L'elemento selezionato non pu\u00F2 essere eliminato perch\u00E8 \u00E8 utilizzato da un altro set di dati. Utilizza la funzione "Utilizzato da" per verificare i collegamenti.
 CannotDeleteRefFlow=Impossibile eliminare il flusso di riferimento
 CannotDeleteRefFlowMessage=Non puoi eliminare il flusso di riferimento di un processo
 Category=Categoria
@@ -57,6 +59,9 @@ ColumnSeparator=Separatore di colonna
 Comma=Virgola
 Complete=Completo
 CompleteReferenceData=Dati di riferimento completi
+Component=Componente
+Configuration=Configurazione
+ConfigureEcospoldMessage=In questa pagina \u00E8 possibile configurare il formato di EcoSpold esportato
 Connect=Connetti
 ConnectProviders=Collega fornitori
 ConnectRecipients=Collega destinatari
@@ -78,6 +83,7 @@ Country=Paese
 CreateANewDatabase=Crea un nuovo database
 CreateANewProductFlowForTheProcess=Crea un nuovo flusso di prodotto per il processo
 CreateDatabase=Creazione del database in corso
+CreateDefaultValuesForMissingFields=Crea i valori predefiniti per i campi mancanti
 CreateNew=Crea nuovo
 CreateProcess=crea processo
 CreateProcesslink=crea collegamento al processo
@@ -90,7 +96,7 @@ CreatesANewProductSystem=Crea un nuovo sistema prodotto
 CreatesANewProject=Crea un nuovo progetto
 CreatesANewSource=Crea una nuova fonte
 CreatesANewUnitGroup=Crea un nuovo gruppo di unit\u00E0
-CreatingEcoSpoldFolder=Creazione della cartella ecoSpold
+CreatingEcoSpoldFolder=Creazione della cartella ecoSpold in corso
 CreatingProductSystem=Creazione del sistema prodotto in corso
 CreationDate=Data di creazione
 Cut=Taglia
@@ -132,20 +138,26 @@ DeleteFile=Elimina file
 DeleteParameter=Elimina paramatero
 DeleteProcess=elimina processo
 DeleteProcesslink=elimina collegamento al processo
+DeleteReportSectionQuestion=Vuoi veramente eliminare questa sezione del report?
+DeleteSection=Elimina sezione
 DependentParameters=Parametri dipendenti
 Description=Descrizione
+DeveloperTools=Strumenti per sviluppatori
 DirectContribution=Contributo diretto
 DirectImpact=Impatto diretto
 Direction=Direzione
+Display=Visualizza
 DoYouReallyWantToDelete=Vuoi veramente eliminare {0}
-Doi=DOI
-Dot=Dot
+Doi=Doi
+Dot=Punto
 EcoSpold2Export=Esporta in formato EcoSpold 2
+EcoSpoldConfiguration=Configurazione EcoSpold
 Economic=Economico
-Edit=Edita
+Edit=Modifica
 ElementaryFlow=Flusso elementare
 Email=e-mail
 EmptyDatabase=Vuoto
+EmptyValueMessage=Il vslore inserito \u00E8 nullo.
 EndDate=Data finale
 English=Inglese
 Error=Errore
@@ -157,6 +169,7 @@ Expand=espandi
 ExpandAll=Espandi tutto
 Export=Esporta...
 ExportAsMatrix=Esporta come matrice
+ExportDataSetsInOneFile=Esporta tutti i set di dati in un archivio unico
 ExportDatabase=Esporta database
 ExportDirectory=Esporta la directory
 ExportDone=Esportazione eseguita
@@ -164,6 +177,7 @@ ExportEcoSpold=Esporta in formato EcoSpold
 ExportILCD=Esporta in formato ILCD
 ExportMatrix=Esporta la matrice
 ExportProcess=Esporto il processo ...
+ExportReport=Esporta il report
 ExportResults=Esporta i risultati
 ExportResultsToExcel=Esporta i risultati in formato Excel
 ExportToExcel=Esporta in formato Excel
@@ -188,13 +202,14 @@ Flows=Flussi
 Folder=Cartella
 Formula=Formula
 FormulaEvaluationFailed=Valutazione della formula fallita
+FormulaInterpreter=Interprete della formula
 FoundProblems=Problemi riscontrati\:
 FromDirectory=Dalla directory\:
 FunctionalUnit=Unit\u00E0 funzionale
 GeneralInformation=Informazioni generali
 Geography=Geografia
 GeometricMean=Media geometrica
-GeometricStandardDeviation=Deviazione standard geometrica
+GeometricStandardDeviation=Deviazione geometrica standard
 German=Tedesco
 Global=Globale
 GlobalParameters=Parametri globali
@@ -203,7 +218,7 @@ GoalAndScope=Obiettivo e campo di applicazione
 Group=Gruppo
 Grouping=Raggruppamento
 Groups=Gruppi
-Help=Aiuto
+Help=&Aiuto
 Hide=Nascondi
 Home=Home
 Host=Host
@@ -230,10 +245,11 @@ Import=Importa...
 ImportData=Importa dati
 ImportDatabase=Importa database
 ImportEcoSpold=Importa dal formato EcoSpold
-ImportEcoSpold01DataSets=Importa dati in formato EcoSpold 01
-ImportEcoSpold02DataSets=Importa dati in formato EcoSpold 02
+ImportEcoSpold01DataSets=Importa set di dati in formato EcoSpold 01
+ImportEcoSpold02DataSets=Importa set di dati in formato EcoSpold 02
 ImportILCD=Importa dal formato ILCD
-IndicatorScore=Punteggio indicatore
+IndicatorBarChart=Indicatore del grafico a barre
+IndicatorScore=Punteggio dell'indicatore
 Information=Informazioni
 InfrastructureFlow=Flusso di infrastruttura
 InfrastructureProcess=Processo di infrastruttura
@@ -243,10 +259,11 @@ InputParameters=Inserici parametri
 Inputs=Inputs
 InputsOutputs=Inputs/Outputs
 IntendedApplication=Applicazione prevista
-InterventionMatrix=Matrice intervento
+InterventionMatrix=Matrice di intervento
 InvalidAllocationFactor=Fattore non valido
 InvalidAllocationFactorMessage=Un fattore di allocazione deve avere un valore compreso tra 0 e 1.
 InvalidFormula=Formula non valida
+InvalidMemoryValue=Valore di memoria non valido
 InvalidNumber=Numero non valido
 InvalidParameterName=Nome del parametro non valido
 InvalidValue=Valore non valido
@@ -265,6 +282,8 @@ LastModificationDate=Data dell'ultima modifica
 Latitude=Latitudine
 Layout=Layout
 LayoutAs=Layout come {0}
+LciaCategoryDescriptionTable=Tabella di descrizione della categoria LCIA
+LciaResultTable=Tabella dei risultati dell'LCIA
 Local=Locale
 LocalDatabase=Database locale
 Location=Localizzazione
@@ -274,11 +293,14 @@ Longitude=Longitudine
 Map=Mappa
 Mark=Contrassegna
 MatrixExport=Esporta la matrice
-MatrixFiles=Archivia la matrice
+MatrixFiles=Files della matrice
 Maximize=massimizza
 MaximizeAll=Massimizza tutto
 Maximum=Massimo
+MaximumMemoryUsage=Utilizzo massimo della memoria (in MB)
 Mean=Media
+MemoryToHighMessage=Il valore di memoria \u00E8 troppo elevato per il tuo sistema operativo.
+MemoryToLowMessage=Il valore di memoria deve essere almeno 256 MB.
 Methods=Metodi
 MinimalTree=albero minimo
 Minimize=minimizza
@@ -291,6 +313,8 @@ ModelingConstants=Costanti di modellazione
 MonteCarloSimulation=Simulazione Monte Carlo
 Monthly=Ogni mese
 Move=sposta
+MoveDown=Sposta gi\u00F9
+MoveUp=Sposta su
 Name=Nome
 NameCannotBeEmpty=Il nome non pu\u00F2 essere vuoto
 NameEmptyOrAlreadyExists=Il nome \u00E8 vuoto o esiste gi\u00E0
@@ -311,6 +335,7 @@ NewLCIAMethod=Nuovo metodo LCIA
 NewProcess=Nuovo processo
 NewProductSystem=Nuovo sistema prodotto
 NewProject=Nuovo progetto
+NewSection=Nuova sezione
 NewSource=Nuova fonte
 NewUnitGroup=Nuovo gruppo di unit\u00E0
 No=No
@@ -327,11 +352,15 @@ NoReferenceProcessSelected=Non \u00E8 stato selezionato nessun processo di rifer
 NoUnitGroupSelected=Non \u00E8 stata selezionata nessuna unit\u00E0 di gruppo
 None=Nessuno
 NormalDistribution=Distribuzione normale
+NormalisationBarChart=Normalizzazione - Grafico a barre
+NormalisationRadarChart=Normalizzazione - Grafico a radar
+NormalisationResultTable=Normalizzazione - Tabella dei risultati
 Normalization=Normalizzazione
 NormalizationAndWeightingSet=Set di normalizzazione e pesatura
 NormalizationFactor=Fattore di normalizzazione
 NormalizationWeighting=Normalizzazione/Pesatura
 NormalizationWeightingSets=Set di normalizzazione e pesatura
+NotAnIntegerNumber=Il valore inserito non \u00E8 un numero intero.
 Note=Nota
 Notification=Notifica
 NumberFormatPage_Description=Imposta il numero dei decimali che devono essere visualizzati.
@@ -344,7 +373,7 @@ Open=Apri
 OpenDatabase=Apri il database
 OpenEditor=Apri l'editor
 OpenInEditor=Apri nell'editor
-OpenLCAUpdateCheck=Verifica aggiornamenti
+OpenLCAUpdateCheck=Verifica aggiornamenti di openLCA
 OpenMiniatureView=Apri in vista miniatura
 Other=Altro
 Output=Output
@@ -352,6 +381,8 @@ Outputs=Outputs
 OverwriteFile=Sovrascrivi il file
 OverwriteFileQuestion=Il file selezionato esiste gi\u00E0. Vuoi sovrascriverlo?
 Parameter=Parametro
+ParameterDescriptionTable=Tabella di descrizione dei parametri
+ParameterValueTable=Tabella dei valori dei parametri
 Parameters=Parametri
 Password=Password
 Paste=Incolla
@@ -369,6 +400,7 @@ PleaseSpecifyUser=Specifica l'utente
 Port=Porta
 Prefer=Preferisci\: {0}
 Process=Processo
+ProcessContributionChart=Grafico dei contributi di processo
 ProcessContributions=Contributi di processo
 ProcessCosts=Costi del processo
 ProcessEvaluationAndValidation=Valutazione e validazione del processo
@@ -381,11 +413,12 @@ Product=Prodotto
 ProductSystem=Sistema prodotto
 ProductSystemExcelExport=Esporta il sistema prodotto in formato Excel
 ProductSystemExcelExportMessage=Scegli una directory nella quale esportare il sistema prodotto. \nUna nuova sottocartella conterr\u00E0 tutti i files esportati.
+ProductSystemStatistics=Statistiche del sistema prodotto
 ProductSystems=Sistemi prodotto
 Progress=Avanzamento
 Project=Progetto
 ProjectResults=Risultati del progetto
-ProjectSetup=imposta progetto
+ProjectSetup=Configurazione del progetto
 Projects=Progetti
 Properties=Propriet\u00E0
 Publication=Pubblicazione
@@ -398,6 +431,8 @@ ReferenceProcess=Processo di riferimento
 ReferenceUnit=Unit\u00E0 di riferimento
 ReferenceUnitIsEmptyOrInvalid=L'unit\u00E0 di riferimento \u00E8 vuota o non \u00E8 valida
 RegionalizedLCIA=LCIA regionalizzato
+RelativeLciaResultsBarChart=Risultati relativi LCIA - Grafico a barre
+RelativeLciaResultsRadarChart=Risultati relativi LCIA - Grafico a radar
 Reload=Aggiorna
 Remote=Remoto
 RemoteDatabase=Database remoto
@@ -408,18 +443,22 @@ RemoveSelected=Rimuovi la selezione
 RemoveSupplyChain=Rimuovi la catena di approvvigionamento
 Rename=Rinomina
 Report=Report
-ReportParameters=Rapporto parametri
+ReportName=Nome del report
+ReportParameters=Parametri del report
+ReportSections=Sezioni del report
+ReportView=Vedi report
 Reset=Reset
 Resize=ridimensiona
 Result=Risultato
 ResultContributions=Contributi al risultato
 Results=Risultati
 ResultsOf=Risultati di
+ResultsOfProject=Risultati del progetto\:
 Reviewer=Revisore
 Route=Percorso
 RunCalculation=Avvia il calcolo
 SamplingProcedure=Procedura di campionamento
-SankeyDiagram=Diagamma Sankey
+SankeyDiagram=Diagramma Sankey
 Sankey_ScaleDescription=Scala colori del processo (contributi in [%])
 Save=Salva
 SaveAs=Salva come...
@@ -427,7 +466,7 @@ SaveAsDefault=Salva come predefinito
 SaveAsImage=Salva come immagine
 SaveChanges=Salva le modifiche
 SaveChangesQuestion=Vuoi salvare le modifiche?
-SavingDiagramAsImageIn=Salvataggio del diagramma in formato immagine in {0}
+SavingDiagramAsImageIn=Salvataggio del diagramma come immagine in {0}
 Search=Cerca
 SearchParameters=Ricerca parametri
 SearchProvidersFor=Cerca i fornitori di
@@ -435,15 +474,16 @@ SearchRecipientsFor=Cerca i destinatari di
 SearchResults=Risultati della ricerca
 Searching=Ricerca in corso...
 SearchingForUnits=Ricerca delle unit\u00E0 in corso...
+Section=Sezione
 Select=Seleziona {0}
 SelectADirectory=Seleziona una directory
 SelectAUserInterfaceLanguage=Scegli la lingua per l'interfaccia utente
 SelectImportFiles=Selezione dei files da importare
-SelectLanguageNoteMessage=le modifiche avranno effetto solo dopo il riavvio di openLCA
+SelectLanguageNoteMessage=Le modifiche avranno effetto solo dopo il riavvio di openLCA
 SelectObjectPage_Description=Specificare una directory di output e selezionare il {0} che si vuole esportare
-SelectProviders=Selezione fornitori
-SelectRecipients=Selezione destinatari
-SelectTheExportFile=Selezione il file da esportare
+SelectProviders=Seleziona fornitori
+SelectRecipients=Seleziona destinatari
+SelectTheExportFile=Seleziona il file da esportare
 SelectTheParameterYouWantToReferTo=Seleziona il paramtero a cui riferirti
 Semicolon=Punto e virgola
 SetSankeyDiagramOptions=Imposta le opzioni del diagramma Sankey
@@ -457,30 +497,36 @@ Showviews=Mostra le &viste
 SimaProCSVImport=Importa file CSV in formato SimaPro
 SingleAmount=Valore unico
 SingleScore=Punteggio singolo
+SingleScoreBarChart=Punteggio singolo - Grafico a barre
+SingleScoreTable=Tabella del punteggio singolo
 SolvingProblems=Soluzione dei problemi in corso
 Source=Fonte
 SourceFileDeleteQuestion=Vuoi veramente eliminare questo file?
-SourceFileOverwriteFileQuestion=Un file con questo nome esiste gi\u00E0 nel database. Vuoi sovrascriverlo?
+SourceFileOverwriteFileQuestion=Esiste gi\u00E0 nel database un file con questo nome. Vuoi sovrascriverlo?
 Sources=Fonti
 StandardDeviation=Deviazione standard
 Start=Avvia
 StartDate=Data di inizio
+Statistics=Statistiche
 SubCategory=Sotto categoria
+Sum=Somma
 Synonyms=Sinonimi
 SystemProcess=Processo di sistema
-SystemSaveProceedQuestion=Per poter eseguire l'attivit\u00E0 richiesta il sistema prodotto deve essere salvato. Vuoi procedere?
-Tab=Tab
+SystemSaveProceedQuestion=Il sistema prodotto deve essere salvato prima di eseguire l'azione richiesta. Vuoi procedere?
+Tab=Tabulazione
 TargetAmount=Quantit\u00E0 obiettivo
 Technology=Tecnologia
 Telefax=Telefax
 Telephone=Telefono
-Test=Test
+Test=Verifica
 TestDistribution=Verifica della distribuzione
 TexchnologyMatrix=Matrice tecnologica
+Text=Testo
 TextDropComponent_ToolTipText=Trascina un oggetto selezionato dalla \nvista di navigazione al campo di testo \no clicca per aprire una \nfinestra di dialogo.
 TextReference=Testo di riferimento
 Time=Data
 TimeAndAuthor=Data e autore
+Title=Titolo
 ToDirectory=Alla directory\:
 TotalAmount=Quantit\u00E0 totale
 Tree=albero
@@ -491,7 +537,7 @@ Uncertainty=Incertezza
 UncertaintyDistribution=Distribuzione dell'incertezza
 UniformDistribution=Distribuzione uniforme
 Unit=Unit\u00E0
-UnitAlreadyExistsInUnitGroup=L'unit\u00E0 esiste gi\u00E0 nel gruppo di unit00E0 {0}
+UnitAlreadyExistsInUnitGroup=L'unit\u00E0 esiste gi\u00E0 nel gruppo di unit\u00E0 {0}
 UnitGroup=Gruppo di unit\u00E0
 UnitGroups=Gruppi di unit\u00E0
 UnitMappingPage_Description=Seleziona la propriet\u00E0 del flusso a cui l'unit\u00E0 deve appartenere per il processo di importazione e assegna un fattore di conversione nel caso in cui l'unit\u00E0 sia nuova.
@@ -502,18 +548,20 @@ Unknown=Sconosciuto
 Unmark=Decontrassegna
 UpdateDatabase=Aggiorna il database
 UpdateDatabaseQuestion=Il database selezionato deve essere aggiornato. Vuoi effettuare l'aggiornamento?
-UpdateMajorVersion=Aggiorna a versione maggiore
-UpdateMinorVersion=Aggiorna a versione minore
-UpdatePreferences=Aggiorna la preferenze
+UpdateMajorVersion=Aggiorna a versione successiva
+UpdateMinorVersion=Aggiorna a versione precedente
+UpdatePreferences=Aggiorna le preferenze
 UpdatingProductSystem=Aggiornamento sistema prodotto in corso
 UpstreamTotal=Totale upstream
 Usage=Utilizzo
 UsageOf=Utilizzo di
+UseBrowserFeatures=Utilizza le funzioni del navigatore
 UsedInProcesses=Utilizzato nei processi
 User=Utente
 UserFriendlyName=Soprannome
 Value=Valore
 Variant=Variante
+VariantDescriptionTable=Tabella di descrizione delle varianti
 Variants=Varianti
 Version=Versione
 VersionNewer=Versione pi\u00F9 recente
