--- a/olca-app/OSGI-INF/l10n/bundle_it.properties
+++ b/olca-app/OSGI-INF/l10n/bundle_it.properties
@@ -1,13 +1,14 @@
-#Fri Jul 11 16:19:51 CEST 2014
+#Mon Dec 15 12:37:59 CET 2014
 ActorEditor=Modifica Autore
 Actors=Autori
+Configuration=Configurazione
 DataProvider=Fornitore dei dati
 EcoSpold=EcoSpold 1
 ElementaryFlows=Flussi elementari
 EmptyCategories=Categorie vuote
 FlowEditor=Modifica flusso
-FlowProperties=Propriet\U00E0 del flusso
-FlowPropertyEditor=Modifica propriet\U00E0 del flusso
+FlowProperties=Propriet\u00E0 del flusso
+FlowPropertyEditor=Modifica propriet\u00E0 del flusso
 Flows=Flussi
 GlobalParameters=Parametri globali
 ILCD=ILCD
@@ -30,8 +31,8 @@ ProductSystems=Sistemi prodotto
 ProjectEditor=Modifica progetto
 SourceEditor=Modifica fonte
 Sources=Fonti
-UnitGroupEditor=Modifica gruppo di unit\U00E0
-UnitGroups=Gruppi di unit\U00E0
+UnitGroupEditor=Modifica gruppo di unit\u00E0
+UnitGroups=Gruppi di unit\u00E0
 Updates=Aggiornamenti
 Usage=Utilizzo
 WasteFlows=Flussi di rifiuti
