--- a/olca-app/src/org/openlca/app/messages_fr.properties
+++ b/olca-app/src/org/openlca/app/messages_fr.properties
@@ -1,10 +1,11 @@
-#Tue Nov 25 15:15:09 CET 2014
+#Mon Dec 15 12:34:01 CET 2014
 AccessAndUseRestrictions=Restrictions d'acc\u00E8s et d'utilisation
 Actor=Acteur
 Actors=Acteurs
 Add=Ajouter
 AddConnectedProcesses=Ajouter des proc\u00E9d\u00E9s connect\u00E9s
 AddNewChildCategory=Ajouter une nouvelle cat\u00E9gorie enfant
+AddSection=Ajouter une section
 AdditionalInformation=Informations suppl\u00E9mentaires
 Address=Adresse
 AdministrativeInformation=Renseignements administratifs
@@ -24,6 +25,7 @@ AvoidedProductFlow=Flux de produits \u00E9vit\u00E9
 AvoidedWasteFlow=Flux de d\u00E9chets \u00E9vit\u00E9
 BaseUncertainty=Incertitude de base
 Browse=Parcourir
+BrowserConfiguration=Configuration du navigateur
 BuildNextTier=Construire le palier suivant
 BuildSupplyChain=Construction du circuit logistique
 CASNumber=Num\u00E9ro CAS
@@ -57,6 +59,9 @@ ColumnSeparator=S\u00E9parateur de colonne
 Comma=Virgule
 Complete=Complet
 CompleteReferenceData=Donn\u00E9es de r\u00E9f\u00E9rence compl\u00E8tes
+Component=Composant
+Configuration=Configuration
+ConfigureEcospoldMessage=Sur cette page, vous pouvez configurer le format d'export EcoSpold
 Connect=Connecter
 ConnectProviders=Connecter les fournisseurs
 ConnectRecipients=Connecter les destinataires
@@ -78,6 +83,7 @@ Country=Pays
 CreateANewDatabase=Cr\u00E9er une nouvelle base de donn\u00E9es
 CreateANewProductFlowForTheProcess=Cr\u00E9er un nouveau flux de produits pour le proc\u00E9d\u00E9
 CreateDatabase=Cr\u00E9ation de la base de donn\u00E9es
+CreateDefaultValuesForMissingFields=Cr\u00E9er les valeurs par d\u00E9faut des champs vides
 CreateNew=Cr\u00E9er nouveau
 CreateProcess=cr\u00E9er un proc\u00E9d\u00E9
 CreateProcesslink=cr\u00E9er un lien de proc\u00E9d\u00E9
@@ -132,20 +138,26 @@ DeleteFile=Supprimer un fichier
 DeleteParameter=Supprimer un param\u00E8tre
 DeleteProcess=supprimer le proc\u00E9d\u00E9
 DeleteProcesslink=supprimer le lien de proc\u00E9d\u00E9
+DeleteReportSectionQuestion=Voulez-vous vraiment effacer cette section du rapport ?
+DeleteSection=Effacer la section
 DependentParameters=Param\u00E8tres li\u00E9s
 Description=Description
+DeveloperTools=Outils d\u00E9veloppeurs
 DirectContribution=Contribution directe
 DirectImpact=Impact direct
 Direction=Direction
+Display=Affichage
 DoYouReallyWantToDelete=Voulez-vous vraiment supprimer {0}
 Doi=Doi
 Dot=Point
 EcoSpold2Export=Export EcoSpold 2
+EcoSpoldConfiguration=Configuration Ecopold
 Economic=Economique
 Edit=Modifier
 ElementaryFlow=Flux primaire
 Email=E-mail
 EmptyDatabase=Base de donn\u00E9es vide
+EmptyValueMessage=LA valeur entr\u00E9e est vide.
 EndDate=Date de fin
 English=Anglais
 Error=Erreur
@@ -157,6 +169,7 @@ Expand=agrandir
 ExpandAll=Tout agrandir
 Export=Exporter...
 ExportAsMatrix=Exporter en tant que matrice
+ExportDataSetsInOneFile=Exporter tous les jeux de donn\u00E9es dans un fichier
 ExportDatabase=Exporter la base de donn\u00E9es
 ExportDirectory=Exporter le dossier
 ExportDone=Export effectu\u00E9
@@ -164,6 +177,7 @@ ExportEcoSpold=Exporter au format EcoSpold
 ExportILCD=Exporter au format ILCD
 ExportMatrix=Exporter la matrice
 ExportProcess=Exporter le proc\u00E9d\u00E9 ...
+ExportReport=Exporter le rapport
 ExportResults=Exporter les r\u00E9sultats
 ExportResultsToExcel=Exporter les r\u00E9sultats vers Excel
 ExportToExcel=Exporter vers Excel
@@ -188,6 +202,7 @@ Flows=Flux
 Folder=Dossier
 Formula=Formule
 FormulaEvaluationFailed=Echec de l'\u00E9valuation de la formule
+FormulaInterpreter=Interpr\u00E9teur de formule
 FoundProblems=Probl\u00E8mes trouv\u00E9s \:
 FromDirectory=Du r\u00E9pertoire \:
 FunctionalUnit=Unit\u00E9 fonctionnelle
@@ -233,6 +248,7 @@ ImportEcoSpold=Importer un fichier EcoSpold
 ImportEcoSpold01DataSets=Importer des jeux de donn\u00E9es EcoSpold 01
 ImportEcoSpold02DataSets=Importer des jeux de donn\u00E9es EcoSpold 02
 ImportILCD=Importer un fichier ILCD
+IndicatorBarChart=Histogramme des indicateurs
 IndicatorScore=Score d'indicateur
 Information=Information
 InfrastructureFlow=Flux de l'infrastructure
@@ -247,6 +263,7 @@ InterventionMatrix=Matrice d'intervention
 InvalidAllocationFactor=Facteur invalide
 InvalidAllocationFactorMessage=Un facteur d'allocation devrait avoir une valeur comprise entre 0 et 1.
 InvalidFormula=Formule invalide
+InvalidMemoryValue=Valeur de m\u00E9moire invalide
 InvalidNumber=Nombre invalide
 InvalidParameterName=Nom du param\u00E8tre invalide
 InvalidValue=Valeur incorrecte
@@ -265,6 +282,8 @@ LastModificationDate=Derni\u00E8re date de modification
 Latitude=Latitude
 Layout=Disposition
 LayoutAs=Mise en page comme {0}
+LciaCategoryDescriptionTable=Tableau de description des cat\u00E9gories d'\u00E9valuation des impacts du cycle de vie
+LciaResultTable=Tableau de r\u00E9sultats de l'\u00E9valuation d'impacts
 Local=Locale
 LocalDatabase=Base de donn\u00E9es locale
 Location=Emplacement
@@ -278,7 +297,10 @@ MatrixFiles=Fichiers de matrice
 Maximize=agrandir
 MaximizeAll=Tout agrandir
 Maximum=Maximum
+MaximumMemoryUsage=Utilisation maximale de la m\u00E9moire (en Mo)
 Mean=Moyenne
+MemoryToHighMessage=La valeur entr\u00E9e est trop grande pour votre syst\u00E8me d'exploitation.
+MemoryToLowMessage=La valeur entr\u00E9e doit \u00EAtre au moins de 256Mo.
 Methods=M\u00E9thodes
 MinimalTree=arbre minimal
 Minimize=r\u00E9duire
@@ -291,6 +313,8 @@ ModelingConstants=Constantes de mod\u00E9lisation
 MonteCarloSimulation=Simulation de Monte Carlo
 Monthly=Mensuel
 Move=d\u00E9placer
+MoveDown=Descendre
+MoveUp=Monter
 Name=Nom
 NameCannotBeEmpty=Le nom ne peut pas \u00EAtre vide
 NameEmptyOrAlreadyExists=Le nom est vide ou n'existe pas
@@ -311,6 +335,7 @@ NewLCIAMethod=Nouvelle m\u00E9thode d'\u00E9valuation des impacts du cycle de vi
 NewProcess=Nouveau proc\u00E9d\u00E9
 NewProductSystem=Nouveau syst\u00E8me de produit
 NewProject=Nouveau projet
+NewSection=Nouvelle section
 NewSource=Nouvelle source
 NewUnitGroup=Nouveau groupe d'unit\u00E9s
 No=Non
@@ -327,11 +352,15 @@ NoReferenceProcessSelected=Pas de proc\u00E9d\u00E9 de r\u00E9f\u00E9rence s\u00
 NoUnitGroupSelected=Aucun groupe d'unit\u00E9s s\u00E9lectionn\u00E9
 None=Aucun
 NormalDistribution=Distribution normale
+NormalisationBarChart=Normalisation - Histogramme
+NormalisationRadarChart=Normalisation - Graphique radar
+NormalisationResultTable=Tableau de r\u00E9sultats de la normalisation
 Normalization=Normalisation
 NormalizationAndWeightingSet=Param\u00E8tre de normalisation / pond\u00E9ration
 NormalizationFactor=Facteur de normalisation
 NormalizationWeighting=Normalisation / Pond\u00E9ration
 NormalizationWeightingSets=Param\u00E8tres de normalisation / Pond\u00E9ration
+NotAnIntegerNumber=La valeur entr\u00E9e n'est pas un nombre entier.
 Note=Note
 Notification=Notification
 NumberFormatPage_Description=D\u00E9finit le nombre de d\u00E9cimales pour l'affichage des nombres.
@@ -352,6 +381,8 @@ Outputs=Sorties
 OverwriteFile=Ecraser le fichier
 OverwriteFileQuestion=Le fichier s\u00E9lectionn\u00E9 existe d\u00E9j\u00E0. Voulez-vous le remplacer ?
 Parameter=Param\u00E8tre
+ParameterDescriptionTable=Tableau de description des param\u00E8tres
+ParameterValueTable=Tableau de valeurs des param\u00E8tres
 Parameters=Param\u00E8tres
 Password=Mot de passe
 Paste=Coller
@@ -369,6 +400,7 @@ PleaseSpecifyUser=Veuillez sp\u00E9cifier un nom d'utilisateur
 Port=Port
 Prefer=Pr\u00E9f\u00E9rez \: {0}
 Process=Proc\u00E9d\u00E9
+ProcessContributionChart=Graphique de contribution des proc\u00E9d\u00E9s
 ProcessContributions=Contribution des proc\u00E9d\u00E9s
 ProcessCosts=Co\u00FBts du proc\u00E9d\u00E9
 ProcessEvaluationAndValidation=Evaluation et validation des proc\u00E9d\u00E9s
@@ -381,6 +413,7 @@ Product=Produit
 ProductSystem=Syst\u00E8me de produit
 ProductSystemExcelExport=Export de syst\u00E8me de produit vers Excel
 ProductSystemExcelExportMessage=Veuillez s\u00E9lectionner un dossier o\u00F9 exporter le syst\u00E8me de produit.\nUn nouveau sous-dossier qui contiendra les fichiers d'export y sera cr\u00E9\u00E9.
+ProductSystemStatistics=Statistiques du syst\u00E8me de produits
 ProductSystems=Syst\u00E8mes de produit
 Progress=Progr\u00E8s
 Project=Projet
@@ -398,6 +431,8 @@ ReferenceProcess=Proc\u00E9d\u00E9 de r\u00E9f\u00E9rence
 ReferenceUnit=Unit\u00E9 de r\u00E9f\u00E9rence
 ReferenceUnitIsEmptyOrInvalid=Unit\u00E9 de r\u00E9f\u00E9rence vide ou non valide
 RegionalizedLCIA=Evaluation des impacts du cycle de vie sur une r\u00E9gion
+RelativeLciaResultsBarChart=R\u00E9sultats relatifs d'EICV - histogramme
+RelativeLciaResultsRadarChart=R\u00E9sultats relatifs d'EICV - diagramme radar
 Reload=Recharger
 Remote=Distante
 RemoteDatabase=Base de donn\u00E9es distante
@@ -408,13 +443,17 @@ RemoveSelected=Supprimer la s\u00E9lection
 RemoveSupplyChain=Supprimer le circuit logistique
 Rename=Renommer
 Report=Rapport
+ReportName=Nom du rapport
 ReportParameters=Param\u00E8tres du rapport
+ReportSections=Sections du rapport
+ReportView=Vue du rapport
 Reset=R\u00E9initialiser
 Resize=redimensionner
 Result=R\u00E9sultat
 ResultContributions=Contributions du r\u00E9sultat
 Results=R\u00E9sultats
 ResultsOf=R\u00E9sultats de
+ResultsOfProject=R\u00E9sultats du projet \:
 Reviewer=Critique
 Route=Route
 RunCalculation=Calcul en cours
@@ -435,6 +474,7 @@ SearchRecipientsFor=Recherche de destinataires pour
 SearchResults=Rasultats de recherche
 Searching=Recherche...
 SearchingForUnits=Recherche d'unit\u00E9s...
+Section=Section
 Select=S\u00E9lectionner {0}
 SelectADirectory=S\u00E9lectionner un r\u00E9pertoire
 SelectAUserInterfaceLanguage=Choisissez la langue de l'interface utilisateur
@@ -457,6 +497,8 @@ Showviews=Afficher &views
 SimaProCSVImport=Import CSV SimaPro
 SingleAmount=Quantit\u00E9 unique
 SingleScore=Score unique
+SingleScoreBarChart=Histogramme de score unique
+SingleScoreTable=Tableau de score unique
 SolvingProblems=R\u00E9solution des probl\u00E8mes
 Source=Source
 SourceFileDeleteQuestion=Voulez-vous vraiment effacer ce fichier ?
@@ -465,7 +507,9 @@ Sources=Sources
 StandardDeviation=Ecart-type
 Start=D\u00E9marrer
 StartDate=Date de d\u00E9but
+Statistics=Statistiques
 SubCategory=Sous-cat\u00E9gorie
+Sum=Somme
 Synonyms=Synonymes
 SystemProcess=Proc\u00E9d\u00E9 du syst\u00E8me
 SystemSaveProceedQuestion=Pour effectuer cette t\u00E2che, le syst\u00E8me de produit doit \u00EAtre enregistr\u00E9. Voulez-vous continuer ?
@@ -477,10 +521,12 @@ Telephone=T\u00E9l\u00E9phone
 Test=Tester
 TestDistribution=Tester la distribution
 TexchnologyMatrix=Matrice de technologie
+Text=Texte
 TextDropComponent_ToolTipText=Fa\u00EEtes glisser un objet choisi\nde la vuende navigation vers le\nchamp texte ou cliquez pour ouvrir\nune bo\u00EEte de dialogue.
 TextReference=R\u00E9f\u00E9rence texte
 Time=Temps
 TimeAndAuthor=Date et auteur
+Title=Titre
 ToDirectory=Vers le r\u00E9pertoire \:
 TotalAmount=Quantit\u00E9 totale
 Tree=arbre
@@ -509,11 +555,13 @@ UpdatingProductSystem=Mise \u00E0 jour du syst\u00E8me de produit
 UpstreamTotal=Total (amont)
 Usage=Utilisation
 UsageOf=Utilisation de
+UseBrowserFeatures=Utiliser les fonctions du navigateur
 UsedInProcesses=Utilis\u00E9 dans les proc\u00E9d\u00E9s
 User=Utilisateur
 UserFriendlyName=Surnom
 Value=Valeur
 Variant=Variante
+VariantDescriptionTable=Tableau de description de la variante
 Variants=Variantes
 Version=Version
 VersionNewer=Version plus r\u00E9cente
