updated Spanish translation

--- a/olca-app/src/org/openlca/app/messages_es.properties
+++ b/olca-app/src/org/openlca/app/messages_es.properties
@@ -1,4 +1,4 @@
-#Mon Dec 15 12:34:01 CET 2014
+#Wed Dec 17 19:21:26 CET 2014
 AccessAndUseRestrictions=Restricciones de acceso y uso
 Actor=Actor
 Actors=Actores
@@ -282,7 +282,7 @@ LastModificationDate=Fecha de \u00FAltima modificaci\u00F3n
 Latitude=Latitud
 Layout=Disposici\u00F3n
 LayoutAs=Disposici\u00F3n como {0}
-LciaCategoryDescriptionTable=Tabla de descripci\u00F3n de la categor\u00EDa de EICV
+LciaCategoryDescriptionTable=Tabla de descripci\u00F3n de categor\u00EDas de EICV
 LciaResultTable=Tabla de resultados de EICV
 Local=Local
 LocalDatabase=Base de datos local
@@ -442,7 +442,7 @@ RemoveObject=Eliminar objeto
 RemoveSelected=Eliminar selecci\u00F3n
 RemoveSupplyChain=Eliminar cadena de suministro
 Rename=Renombrar
-Report=Report
+Report=Informe
 ReportName=Nombre del informe
 ReportParameters=Report parameters
 ReportSections=Secciones del informe
