Extended external sources and corrected/added deleting and updating shape files (that are already linked)

--- a/olca-app/src/org/openlca/app/messages.properties
+++ b/olca-app/src/org/openlca/app/messages.properties
@@ -396,6 +396,8 @@ Properties=Properties
 Publication=Publication
 QuantitativeReference=Quantitative reference
 QuickResults=Quick results
+RecalculateQuestionTitle=Recalculate
+RecalculateQuestionText=Do you want the default value and uncertainty to be recalculated with the selected data source?
 ReconnectProcesslink=reconnect processlink
 Reference=Reference
 ReferenceFlowProperty=Reference flow property
