Added show perspectives

--- a/olca-app/src/org/openlca/app/messages.properties
+++ b/olca-app/src/org/openlca/app/messages.properties
@@ -498,6 +498,7 @@ ShowFormulas=Show formulas
 ShowOutline=Show outline
 ShowValues=Show values
 Showviews=Show &views
+Showperspectives=Show &perspectives
 SimaProCSVImport=SimaPro CSV Import
 SingleAmount=Single amount
 SingleScore=Single score
